@@ -23,6 +23,8 @@ import org.openehealth.ipf.commons.ihe.xds.core.requests.query.Query;
 import org.openehealth.ipf.commons.ihe.xds.core.requests.query.QueryReturnType;
 import org.openehealth.ipf.commons.ihe.xds.core.requests.query.QueryType;
 
+import java.lang.reflect.InvocationTargetException;
+
 /**
  * Transforms between a {@link QueryRegistry} and an {@link EbXMLAdhocQueryRequest}. 
  * @author Jens Riemschneider
@@ -78,8 +80,8 @@ public class QueryRegistryTransformer {
 
     private Query createQuery(QueryType queryType) {
         try {
-            return queryType.getType().newInstance();
-        } catch (InstantiationException | IllegalAccessException e) {
+            return queryType.getType().getConstructor().newInstance();
+        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
             throw new IllegalStateException("Invalid query class for type: " + queryType, e);
         }
     }
